--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,29 +1,23 @@
-name: Test
-
+name: My workflow
 on: [push, pull_request]
 jobs:
   test:
-    runs-on: ubuntu-latest
-
-    env:
-      ENV: test
-
     strategy:
+      fail-fast: false
       matrix:
-        ruby-version: ['3.3.5', '3.1', '3.0', '2.7.2']
-
+        os: [ubuntu-latest, macos-latest]
+        ruby: [head, 3.3.5, 3.2.2]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Ruby ${{ matrix.ruby-version }}
-        uses: ruby/setup-ruby@359bebbc29cbe6c87da6bc9ea3bc930432750108
-        with:
-          ruby-version: ${{ matrix.ruby-version }}
+    - uses: actions/checkout@v4
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: ${{ matrix.ruby }}
+        bundler-cache: false # runs 'bundle install' and caches installed gems automatically
 
-      - name: Install dependencies
-        run: RUBYOPT='--disable-did_you_mean' bundle install
-
-      - name: Rubocop (Linter)
-        run: bundle exec rubocop
-
-      - name: Run tests
-        run: bundle exec rspec
+    - name: Install dependencies
+      run: bundle install
+    - name: Rubocop (Linter)
+      run: bundle exec rubocop
+    - name: Run tests
+      run: bundle exec rspec
